// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simple button button with left icon 1`] = `
<Unknown
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgba(0,198,132,1)",
        "borderRadius": 4,
        "height": 40,
        "width": 160,
      },
      Object {},
    ]
  }
  underlayColor="white"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {},
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          undefined,
          Object {
            "fontFamily": "voyager",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "SourceSansPro-SemiBold",
            "fontSize": 17,
            "lineHeight": 17,
            "marginTop": 2,
          },
          Object {
            "color": "white",
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      Click me
    </Text>
  </View>
</Unknown>
`;

exports[`Simple button button with right icon 1`] = `
<Unknown
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgba(0,198,132,1)",
        "borderRadius": 4,
        "height": 40,
        "width": 160,
      },
      Object {},
    ]
  }
  underlayColor="white"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "flexDirection": "row-reverse",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          undefined,
          Object {
            "fontFamily": "voyager",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "SourceSansPro-SemiBold",
            "fontSize": 17,
            "lineHeight": 17,
            "marginTop": 2,
          },
          Object {
            "color": "white",
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      Click me
    </Text>
  </View>
</Unknown>
`;

exports[`Simple button renders correctly 1`] = `
<TouchableHighlight
  activeOpacity={0.85}
  delayPressOut={100}
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgba(0,198,132,1)",
        "borderRadius": 4,
        "height": 40,
        "width": 160,
      },
      Object {},
    ]
  }
  underlayColor="white"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "SourceSansPro-SemiBold",
            "fontSize": 17,
            "lineHeight": 17,
            "marginTop": 2,
          },
          Object {
            "color": "white",
          },
          Object {},
        ]
      }
    >
      Click me
    </Text>
  </View>
</TouchableHighlight>
`;

exports[`Simple button transparent background with border 1`] = `
<Unknown
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgba(0,198,132,1)",
        "borderRadius": 4,
        "height": 40,
        "width": 160,
      },
      Object {
        "backgroundColor": "transparent",
        "borderColor": "rgba(0,198,132,1)",
        "borderWidth": 1.2,
      },
    ]
  }
  underlayColor="white"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "SourceSansPro-SemiBold",
            "fontSize": 17,
            "lineHeight": 17,
            "marginTop": 2,
          },
          Object {
            "color": "rgba(0,198,132,1)",
          },
          Object {},
        ]
      }
    >
      Click me
    </Text>
  </View>
</Unknown>
`;

exports[`Simple button with click action 1`] = `
<Unknown
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgba(0,198,132,1)",
        "borderRadius": 4,
        "height": 40,
        "width": 160,
      },
      Object {},
    ]
  }
  underlayColor="white"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "SourceSansPro-SemiBold",
            "fontSize": 17,
            "lineHeight": 17,
            "marginTop": 2,
          },
          Object {
            "color": "white",
          },
          Object {},
        ]
      }
    >
      Click me
    </Text>
  </View>
</Unknown>
`;

exports[`Simple button with underlay color 1`] = `
<Unknown
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgba(0,198,132,1)",
        "borderRadius": 4,
        "height": 40,
        "width": 160,
      },
      Object {},
    ]
  }
  underlayColor="rgba(255, 201, 51, 1)"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "SourceSansPro-SemiBold",
            "fontSize": 17,
            "lineHeight": 17,
            "marginTop": 2,
          },
          Object {
            "color": "white",
          },
          Object {},
        ]
      }
    >
      Click me
    </Text>
  </View>
</Unknown>
`;
